--- a/index.html
+++ b/index.html
@@ -8,19 +8,32 @@
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
   </head>
   <body>
-    <!-- <model-viewer> HTML element -->
+    <!-- First <model-viewer> HTML element -->
     <model-viewer src="mandoline-body.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
+      <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
+      </div>
+      <button slot="ar-button" id="ar-button-body">
+          View Body in your space
+      </button>
+      <div id="ar-prompt-body">
+          <img src="ar_hand_prompt.png">
+      </div>
+    </model-viewer>
+
+    <!-- Second <model-viewer> HTML element -->
     <model-viewer src="mandoline-handguard.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
-      <button slot="ar-button" id="ar-button">
-          View in your space
+      <button slot="ar-button" id="ar-button-handguard">
+          View Handguard in your space
       </button>
-      <div id="ar-prompt">
+      <div id="ar-prompt-handguard">
           <img src="ar_hand_prompt.png">
       </div>
-    </model-viewer>  
+    </model-viewer>
+
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
