--- a/try.html
+++ b/try.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR Example</title>
     <style>
         body { margin: 0; }
-        canvas { display: block; }
+        #ARButton { position: fixed; top: 10px; right: 10px; z-index: 10; }
     </style>
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.128.0/examples/js/systems/ARButton.js"></script>
     <script>
-        // Setup scene, camera, and renderer
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
+        let container;
+        let camera, scene, renderer;
+        let cube;
 
-        // Create a cube
-        const geometry = new THREE.BoxGeometry();
-        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-        const cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
+        init();
 
-        camera.position.z = 5;
+        function init() {
+            scene = new THREE.Scene();
 
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
+            camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
 
-            // Calculate distance between camera and cube
-            const distance = camera.position.distanceTo(cube.position);
-            
-            // Scale the cube based on distance
-            // The closer the camera, the larger the cube
-            const scale = 1 / (distance * 0.2); // Adjust multiplier for desired scaling effect
-            cube.scale.set(scale, scale, scale);
+            renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+            renderer.setPixelRatio(window.devicePixelRatio);
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.xr.enabled = true;
+            document.body.appendChild(renderer.domElement);
 
-            // Rotate the cube
-            cube.rotation.x += 0.01;
-            cube.rotation.y += 0.01;
+            // Add AR button
+            document.body.appendChild(ARButton.createButton(renderer, {
+                requiredFeatures: ['hit-test']
+            }));
 
-            renderer.render(scene, camera);
+            // Create a cube
+            const geometry = new THREE.BoxGeometry(0.1, 0.1, 0.1);
+            const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+            cube = new THREE.Mesh(geometry, material);
+            scene.add(cube);
+
+            // Position the cube 1 meter in front of the camera
+            cube.position.z = -1;
+
+            renderer.setAnimationLoop(render);
+
+            window.addEventListener('resize', onWindowResize, false);
         }
 
-        // Handle window resizing
-        window.addEventListener('resize', onWindowResize, false);
         function onWindowResize() {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
         }
 
-        // Add mouse movement to change camera position
-        document.addEventListener('mousemove', (event) => {
-            camera.position.x = (event.clientX - window.innerWidth/2) * 0.005;
-            camera.position.y = -(event.clientY - window.innerHeight/2) * 0.005;
-            camera.lookAt(scene.position);
-        });
-
-        animate();
+        function render() {
+            cube.rotation.x += 0.01;
+            cube.rotation.y += 0.01;
+            renderer.render(scene, camera);
+        }
     </script>
 </body>
 </html>
