--- a/try.html
+++ b/try.html
@@ -5,14 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR Example</title>
     <style>
-        body { margin: 0; }
-        #ARButton { position: fixed; top: 10px; right: 10px; z-index: 10; }
+        body { 
+            margin: 0; 
+            overflow: hidden;
+        }
+        #ARButton { 
+            position: fixed; 
+            top: 10px; 
+            right: 10px; 
+            z-index: 10; 
+        }
     </style>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.128.0/examples/js/systems/ARButton.js"></script>
-    <script>
+    <!-- Load Three.js and WebXR packages -->
+    <script async src="https://unpkg.com/es-module-shims/dist/es-module-shims.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.157.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.157.0/examples/jsm/"
+        }
+    }
+    </script>
+    <script type="module">
+        import * as THREE from 'three';
+        import { ARButton } from 'three/addons/webxr/ARButton.js';
+
         let container;
         let camera, scene, renderer;
         let cube;
@@ -32,7 +51,9 @@
 
             // Add AR button
             document.body.appendChild(ARButton.createButton(renderer, {
-                requiredFeatures: ['hit-test']
+                requiredFeatures: ['hit-test'],
+                optionalFeatures: ['dom-overlay'],
+                domOverlay: { root: document.body }
             }));
 
             // Create a cube
@@ -40,6 +61,11 @@
             const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
             cube = new THREE.Mesh(geometry, material);
             scene.add(cube);
+
+            // Add light
+            const light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
+            light.position.set(0.5, 1, 0.25);
+            scene.add(light);
 
             // Position the cube 1 meter in front of the camera
             cube.position.z = -1;
@@ -55,9 +81,11 @@
             renderer.setSize(window.innerWidth, window.innerHeight);
         }
 
-        function render() {
-            cube.rotation.x += 0.01;
-            cube.rotation.y += 0.01;
+        function render(timestamp, frame) {
+            if (cube) {
+                cube.rotation.x += 0.01;
+                cube.rotation.y += 0.01;
+            }
             renderer.render(scene, camera);
         }
     </script>
